--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,15 +15,15 @@
 </head>
 <body>
   <div class="container">
-    <h1>isgasoir - Frontend minimal</h1>
-    <p>Interface minimale pour CRUD. Sections rapides : Chapitres, Modules, Etudiants, Semestres, Filières, Activités.</p>
+    <h1>isgasoir — Interface minimale (FR)</h1>
+    <p>Gestion simple : créer, modifier, supprimer et générer des activités IA pour un chapitre.</p>
 
     <section class="card" id="chapitres">
       <h2>Chapitres</h2>
       <div>
         <input id="chap-title" placeholder="Titre" />
         <textarea id="chap-content" placeholder="Contenu"></textarea>
-        <input id="chap-duree" placeholder="Duree" />
+        <input id="chap-duree" placeholder="Durée (ex: 1.5)" />
         <button id="chap-create">Créer</button>
       </div>
       <div id="chap-list"></div>
@@ -33,7 +33,7 @@
       <h2>Modules</h2>
       <div>
         <input id="mod-name" placeholder="Nom" />
-        <input id="mod-coiff" placeholder="Coiff (ex: 1.0)" />
+        <input id="mod-coiff" placeholder="Coefficient (ex: 1.0)" />
         <input id="mod-sem" placeholder="SemestreId (optionnel)" />
         <button id="mod-create">Créer</button>
       </div>
@@ -41,12 +41,12 @@
     </section>
 
     <section class="card" id="students">
-      <h2>Etudiants</h2>
+      <h2>Étudiants</h2>
       <div>
         <input id="st-nom" placeholder="Nom" />
-        <input id="st-prenom" placeholder="Prenom" />
+        <input id="st-prenom" placeholder="Prénom" />
         <input id="st-date" placeholder="Date (YYYY-MM-DD)" />
-        <input id="st-gender" placeholder="Gender" />
+        <input id="st-gender" placeholder="Genre" />
         <button id="st-create">Créer</button>
       </div>
       <div id="st-list"></div>
@@ -62,7 +62,7 @@
     </section>
 
     <section class="card" id="filieres">
-      <h2>Filieres</h2>
+      <h2>Filières</h2>
       <div>
         <input id="fil-name" placeholder="Nom" />
         <textarea id="fil-desc" placeholder="Description"></textarea>
@@ -72,7 +72,7 @@
     </section>
 
     <section class="card" id="activities">
-      <h2>Activities</h2>
+      <h2>Activités</h2>
       <div id="activities-list"></div>
     </section>
 
@@ -81,60 +81,52 @@
   <script>
     const apiBase = '';
 
-    // Generic safe fetch helper
+    function confirmDelete(){ return confirm('Confirmer la suppression ?'); }
+
     async function safeFetch(url, opts){
-      try{
-        const r = await fetch(apiBase + url, opts);
-        if (!r.ok) throw new Error(r.status + ' ' + r.statusText);
-        return r;
-      }catch(e){ console.warn('fetch', url, e); return null; }
+      try{ const r = await fetch(apiBase + url, opts); if(!r.ok) throw new Error(r.status + ' ' + r.statusText); return r; }catch(e){ console.warn('fetch', url, e); return null; }
     }
 
     // CHAPITRES
-    async function loadChapitres(){
-      const r = await safeFetch('/api/chapitres'); if(!r) return;
-      const list = await r.json();
-      const container = document.getElementById('chap-list'); container.innerHTML='';
-      list.forEach(c=>{
-        const el = document.createElement('div'); el.className='card';
-        el.innerHTML = `<strong>${c.title}</strong> <div>${c.content}</div> <div>Duree: ${c.duree}</div>
-          <div><button onclick="gen(${c.id})">Generer Activite</button>
-          <button onclick="delChap(${c.id})">Supprimer</button></div>`;
-        container.appendChild(el);
-      });
-    }
-    async function createChap(){
-      const title = document.getElementById('chap-title').value;
-      const content = document.getElementById('chap-content').value;
-      const duree = parseFloat(document.getElementById('chap-duree').value || '0');
-      await safeFetch('/api/chapitres', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ Title: title, Content: content, Duree: duree }) });
-      await loadChapitres();
-    }
-    async function delChap(id){ await safeFetch('/api/chapitres/' + id, { method:'DELETE' }); await loadChapitres(); }
-    async function gen(id){ await safeFetch('/api/activities/generate/' + id, { method:'POST' }); await loadActivities(id); }
+    async function loadChapitres(){ const r = await safeFetch('/api/chapitres'); if(!r) return; const list = await r.json(); const c=document.getElementById('chap-list'); c.innerHTML=''; list.forEach(ch=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML = `<strong>${ch.title}</strong><div>${ch.content}</div><div>Durée: ${ch.duree}</div>
+          <div>
+            <button onclick="gen(${ch.id})">Générer activité</button>
+            <button onclick="editChap(${ch.id})">Éditer</button>
+            <button onclick="delChap(${ch.id})">Supprimer</button>
+          </div>`; c.appendChild(el); }); }
+    async function createChap(){ const title=document.getElementById('chap-title').value; const content=document.getElementById('chap-content').value; const duree=parseFloat(document.getElementById('chap-duree').value||'0'); await safeFetch('/api/chapitres',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Title:title, Content:content, Duree:duree })}); await loadChapitres(); }
+    async function delChap(id){ if(!confirmDelete()) return; await safeFetch('/api/chapitres/'+id,{method:'DELETE'}); await loadChapitres(); }
+    async function gen(id){ await safeFetch('/api/activities/generate/'+id,{method:'POST'}); await loadActivities(id); }
+    function editChap(id){ const title=prompt('Titre?'); if(title===null) return; const content=prompt('Contenu?'); if(content===null) return; const duree=prompt('Durée?'); if(duree===null) return; safeFetch('/api/chapitres/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Title:title, Content:content, Duree:parseFloat(duree) })}).then(()=>loadChapitres()); }
 
     // MODULES
-    async function loadModules(){ const r = await safeFetch('/api/modules'); if(!r) return; const list = await r.json(); const container = document.getElementById('mod-list'); container.innerHTML=''; list.forEach(m=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML = `<strong>${m.name}</strong><div>Coiff: ${m.coiff}</div><div>Id: ${m.id}</div><div><button onclick="delMod(${m.id})">Supprimer</button></div>`; container.appendChild(el); }); }
-    async function createMod(){ const name=document.getElementById('mod-name').value; const coiff=parseFloat(document.getElementById('mod-coiff').value||'0'); const semId = parseInt(document.getElementById('mod-sem').value||'0'); const payload = { Name: name, Coiff: coiff }; if(semId>0) payload.Sem = { Id: semId }; await safeFetch('/api/modules',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)}); await loadModules(); }
-    async function delMod(id){ await safeFetch('/api/modules/' + id, { method:'DELETE' }); await loadModules(); }
+    async function loadModules(){ const r=await safeFetch('/api/modules'); if(!r) return; const list=await r.json(); const c=document.getElementById('mod-list'); c.innerHTML=''; list.forEach(m=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${m.name}</strong><div>Coeff: ${m.coiff}</div><div>ID:${m.id}</div>
+          <div><button onclick="editMod(${m.id},'${escape(m.name)}',${m.coiff||0})">Éditer</button><button onclick="delMod(${m.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function createMod(){ const name=document.getElementById('mod-name').value; const coiff=parseFloat(document.getElementById('mod-coiff').value||'0'); const semId=parseInt(document.getElementById('mod-sem').value||'0'); const payload={ Name:name, Coiff:coiff }; if(semId>0) payload.Sem={ Id: semId }; await safeFetch('/api/modules',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)}); await loadModules(); }
+    async function delMod(id){ if(!confirmDelete()) return; await safeFetch('/api/modules/'+id,{method:'DELETE'}); await loadModules(); }
+    function editMod(id,name,coiff){ const n=prompt('Nom', name); if(n===null) return; const c=prompt('Coeff', coiff); if(c===null) return; safeFetch('/api/modules/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:n, Coiff:parseFloat(c) })}).then(()=>loadModules()); }
 
     // STUDENTS
-    async function loadStudents(){ const r = await safeFetch('/api/studentapi'); if(!r) return; const list = await r.json(); const container = document.getElementById('st-list'); container.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML = `<strong>${s.nom} ${s.prenom}</strong><div>Date: ${s.date}</div><div>Gender: ${s.gender}</div><div><button onclick="delStudent(${s.id})">Supprimer</button></div>`; container.appendChild(el); }); }
-    async function createStudent(){ const nom=document.getElementById('st-nom').value; const prenom=document.getElementById('st-prenom').value; const date=document.getElementById('st-date').value; const gender=document.getElementById('st-gender').value; await safeFetch('/api/studentapi',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Nom: nom, Prenom: prenom, Date: date, Gender: gender })}); await loadStudents(); }
-    async function delStudent(id){ await safeFetch('/api/studentapi/' + id, { method:'DELETE' }); await loadStudents(); }
+    async function loadStudents(){ const r=await safeFetch('/api/studentapi'); if(!r) return; const list=await r.json(); const c=document.getElementById('st-list'); c.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${s.nom} ${s.prenom}</strong><div>Date: ${s.date}</div><div>Genre: ${s.gender}</div>
+          <div><button onclick="editStudent(${s.id},'${escape(s.nom)}','${escape(s.prenom)}','${s.date}','${escape(s.gender)}')">Éditer</button><button onclick="delStudent(${s.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function createStudent(){ const nom=document.getElementById('st-nom').value; const prenom=document.getElementById('st-prenom').value; const date=document.getElementById('st-date').value; const gender=document.getElementById('st-gender').value; await safeFetch('/api/studentapi',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Nom:nom, Prenom:prenom, Date:date, Gender:gender })}); await loadStudents(); }
+    async function delStudent(id){ if(!confirmDelete()) return; await safeFetch('/api/studentapi/'+id,{method:'DELETE'}); await loadStudents(); }
+    function editStudent(id,nom,prenom,date,gender){ const n=prompt('Nom', unescape(nom)); if(n===null) return; const p=prompt('Prénom', unescape(prenom)); if(p===null) return; const d=prompt('Date', date); if(d===null) return; const g=prompt('Genre', unescape(gender)); if(g===null) return; safeFetch('/api/studentapi/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Nom:n, Prenom:p, Date:d, Gender:g })}).then(()=>loadStudents()); }
 
     // SEMESTRES
-    async function loadSemestres(){ const r = await safeFetch('/api/semestre'); if(!r) return; const list = await r.json(); const container = document.getElementById('sem-list'); container.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML = `<strong>${s.name}</strong><div>Id: ${s.id}</div><div><button onclick="delSem(${s.id})">Supprimer</button></div>`; container.appendChild(el); }); }
-    async function createSem(){ const name = document.getElementById('sem-name').value; await safeFetch('/api/semestre',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name: name })}); await loadSemestres(); }
-    async function delSem(id){ await safeFetch('/api/semestre/' + id, { method:'DELETE' }); await loadSemestres(); }
+    async function loadSemestres(){ const r=await safeFetch('/api/semestre'); if(!r) return; const list=await r.json(); const c=document.getElementById('sem-list'); c.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${s.name}</strong><div>ID:${s.id}</div><div><button onclick="editSem(${s.id},'${escape(s.name)}')">Éditer</button><button onclick="delSem(${s.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function createSem(){ const name=document.getElementById('sem-name').value; await safeFetch('/api/semestre',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:name })}); await loadSemestres(); }
+    async function delSem(id){ if(!confirmDelete()) return; await safeFetch('/api/semestre/'+id,{method:'DELETE'}); await loadSemestres(); }
+    function editSem(id,name){ const n=prompt('Nom', unescape(name)); if(n===null) return; safeFetch('/api/semestre/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:n })}).then(()=>loadSemestres()); }
 
     // FILIERES
-    async function loadFilieres(){ const r = await safeFetch('/api/filiere'); if(!r) return; const list = await r.json(); const container = document.getElementById('fil-list'); container.innerHTML=''; list.forEach(f=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML = `<strong>${f.name}</strong><div>${f.description}</div><div><button onclick="delFil(${f.id})">Supprimer</button></div>`; container.appendChild(el); }); }
-    async function createFil(){ const name=document.getElementById('fil-name').value; const desc=document.getElementById('fil-desc').value; await safeFetch('/api/filiere',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name: name, Description: desc })}); await loadFilieres(); }
-    async function delFil(id){ await safeFetch('/api/filiere/' + id, { method:'DELETE' }); await loadFilieres(); }
+    async function loadFilieres(){ const r=await safeFetch('/api/filiere'); if(!r) return; const list=await r.json(); const c=document.getElementById('fil-list'); c.innerHTML=''; list.forEach(f=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${f.name}</strong><div>${f.description}</div><div><button onclick="editFil(${f.id},'${escape(f.name)}','${escape(f.description)}')">Éditer</button><button onclick="delFil(${f.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function createFil(){ const name=document.getElementById('fil-name').value; const desc=document.getElementById('fil-desc').value; await safeFetch('/api/filiere',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:name, Description:desc })}); await loadFilieres(); }
+    async function delFil(id){ if(!confirmDelete()) return; await safeFetch('/api/filiere/'+id,{method:'DELETE'}); await loadFilieres(); }
+    function editFil(id,name,desc){ const n=prompt('Nom', unescape(name)); if(n===null) return; const d=prompt('Description', unescape(desc)); if(d===null) return; safeFetch('/api/filiere/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:n, Description:d })}).then(()=>loadFilieres()); }
 
     // ACTIVITIES
-    async function loadActivities(chapId){ const r = await safeFetch('/api/activities/by-chapitre/' + chapId); if(!r) return; const list = await r.json(); const container = document.getElementById('activities-list'); container.innerHTML=''; list.forEach(a=>{ const el = document.createElement('div'); el.className='card'; el.innerHTML = `<strong>${a.title}</strong><pre>${a.instructions}</pre>`; container.appendChild(el); }); }
+    async function loadActivities(chapId){ const r=await safeFetch('/api/activities/by-chapitre/'+chapId); if(!r) return; const list=await r.json(); const c=document.getElementById('activities-list'); c.innerHTML=''; list.forEach(a=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${a.title}</strong><pre>${a.instructions}</pre>`; c.appendChild(el); }); }
 
     // Wire buttons
     document.getElementById('chap-create').addEventListener('click', createChap);
