Frontend: remove 'minimal (FR)' wording and ensure UTF-8 meta tag for accents

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>isgasoir - Frontend minimal</title>
   <style>
@@ -15,8 +16,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>isgasoir — Interface minimale (FR)</h1>
-    <p>Gestion simple : créer, modifier, supprimer et générer des activités IA pour un chapitre.</p>
+    <h1>isgasoir — Interface</h1>
+    <p>Gestion : créer, modifier, supprimer et générer des activités IA pour un chapitre.</p>
 
     <section class="card" id="chapitres">
       <h2>Chapitres</h2>
