--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,140 +1,154 @@
 <!doctype html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>isgasoir - Frontend minimal</title>
+  <title>isgasoir - Interface</title>
   <style>
-    body{font-family:Segoe UI,Arial;margin:16px}
-    .container{max-width:900px;margin:auto}
-    .card{border:1px solid #ddd;padding:12px;margin:8px 0;border-radius:6px}
-    input,select,textarea{width:100%;padding:8px;margin:6px 0}
-    button{padding:8px 12px;margin:4px}
-    .row{display:flex;gap:12px}
+    :root{--bg:#f7f9fc;--card:#ffffff;--accent:#2b6cb0;--muted:#6b7280}
+    body{font-family:Inter,Segoe UI,Arial,Helvetica,sans-serif;background:var(--bg);color:#0f172a;margin:0;padding:20px}
+    .container{max-width:1100px;margin:0 auto}
+    header{display:flex;align-items:center;justify-content:space-between;margin-bottom:16px}
+    h1{font-size:20px;margin:0}
+    .grid{display:grid;grid-template-columns:1fr 380px;gap:16px}
+    .card{background:var(--card);border-radius:10px;padding:12px;box-shadow:0 1px 3px rgba(15,23,42,0.06)}
+    .controls{display:flex;flex-direction:column;gap:8px}
+    input,select,textarea{width:100%;padding:8px;border:1px solid #e5e7eb;border-radius:6px}
+    textarea{min-height:80px}
+    button{background:var(--accent);color:#fff;border:0;padding:8px 12px;border-radius:6px;cursor:pointer}
+    .muted{color:var(--muted);font-size:13px}
+    .list-item{border:1px solid #eef2f6;padding:10px;border-radius:8px;margin-bottom:8px}
+    .actions{display:flex;gap:8px;margin-top:8px}
+    .secondary{background:#fff;color:var(--accent);border:1px solid #cfe0f6}
+    pre{white-space:pre-wrap;background:#f3f4f6;padding:8px;border-radius:6px}
+    @media(max-width:900px){.grid{grid-template-columns:1fr}}
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>isgasoir — Interface</h1>
-    <p>Gestion : créer, modifier, supprimer et générer des activités IA pour un chapitre.</p>
-
-    <section class="card" id="chapitres">
-      <h2>Chapitres</h2>
+    <header>
       <div>
-        <input id="chap-title" placeholder="Titre" />
-        <textarea id="chap-content" placeholder="Contenu"></textarea>
-        <input id="chap-duree" placeholder="Durée (ex: 1.5)" />
-        <button id="chap-create">Créer</button>
+        <h1>isgasoir — Interface</h1>
+        <div class="muted">Créer / modifier / supprimer les entités et générer des activités</div>
       </div>
-      <div id="chap-list"></div>
-    </section>
+    </header>
 
-    <section class="card" id="modules">
-      <h2>Modules</h2>
-      <div>
-        <input id="mod-name" placeholder="Nom" />
-        <input id="mod-coiff" placeholder="Coefficient (ex: 1.0)" />
-        <input id="mod-sem" placeholder="SemestreId (optionnel)" />
-        <button id="mod-create">Créer</button>
-      </div>
-      <div id="mod-list"></div>
-    </section>
+    <div class="grid">
+      <main>
+        <section class="card" id="chapitres">
+          <h2>Chapitres</h2>
+          <div class="controls">
+            <input id="chap-title" placeholder="Titre" />
+            <textarea id="chap-content" placeholder="Contenu"></textarea>
+            <input id="chap-duree" placeholder="Durée (ex: 1.5)" />
+            <div style="display:flex;gap:8px"><button id="chap-create">Créer</button><button id="chap-refresh" class="secondary">Rafraîchir</button></div>
+          </div>
+          <div id="chap-list" style="margin-top:12px"></div>
+        </section>
 
-    <section class="card" id="students">
-      <h2>Étudiants</h2>
-      <div>
-        <input id="st-nom" placeholder="Nom" />
-        <input id="st-prenom" placeholder="Prénom" />
-        <input id="st-date" placeholder="Date (YYYY-MM-DD)" />
-        <input id="st-gender" placeholder="Genre" />
-        <button id="st-create">Créer</button>
-      </div>
-      <div id="st-list"></div>
-    </section>
+        <section class="card" style="margin-top:12px">
+          <h2>Modules</h2>
+          <div class="controls">
+            <input id="mod-name" placeholder="Nom" />
+            <input id="mod-coiff" placeholder="Coefficient (ex: 1.0)" />
+            <input id="mod-sem" placeholder="SemestreId (optionnel)" />
+            <div style="display:flex;gap:8px"><button id="mod-create">Créer</button><button id="mod-refresh" class="secondary">Rafraîchir</button></div>
+          </div>
+          <div id="mod-list" style="margin-top:12px"></div>
+        </section>
+      </main>
 
-    <section class="card" id="semestres">
-      <h2>Semestres</h2>
-      <div>
-        <input id="sem-name" placeholder="Nom" />
-        <button id="sem-create">Créer</button>
-      </div>
-      <div id="sem-list"></div>
-    </section>
+      <aside>
+        <section class="card">
+          <h3>Étudiants</h3>
+          <div class="controls">
+            <input id="st-nom" placeholder="Nom" />
+            <input id="st-prenom" placeholder="Prénom" />
+            <input id="st-date" placeholder="Date (YYYY-MM-DD)" />
+            <input id="st-gender" placeholder="Genre" />
+            <div style="display:flex;gap:8px"><button id="st-create">Créer</button><button id="st-refresh" class="secondary">Rafraîchir</button></div>
+          </div>
+          <div id="st-list" style="margin-top:12px"></div>
+        </section>
 
-    <section class="card" id="filieres">
-      <h2>Filières</h2>
-      <div>
-        <input id="fil-name" placeholder="Nom" />
-        <textarea id="fil-desc" placeholder="Description"></textarea>
-        <button id="fil-create">Créer</button>
-      </div>
-      <div id="fil-list"></div>
-    </section>
+        <section class="card" style="margin-top:12px">
+          <h3>Semestres</h3>
+          <div class="controls">
+            <input id="sem-name" placeholder="Nom" />
+            <div style="display:flex;gap:8px"><button id="sem-create">Créer</button><button id="sem-refresh" class="secondary">Rafraîchir</button></div>
+          </div>
+          <div id="sem-list" style="margin-top:12px"></div>
+        </section>
 
-    <section class="card" id="activities">
-      <h2>Activités</h2>
-      <div id="activities-list"></div>
-    </section>
+        <section class="card" style="margin-top:12px">
+          <h3>Filières</h3>
+          <div class="controls">
+            <input id="fil-name" placeholder="Nom" />
+            <textarea id="fil-desc" placeholder="Description"></textarea>
+            <div style="display:flex;gap:8px"><button id="fil-create">Créer</button><button id="fil-refresh" class="secondary">Rafraîchir</button></div>
+          </div>
+          <div id="fil-list" style="margin-top:12px"></div>
+        </section>
 
+        <section class="card" style="margin-top:12px">
+          <h3>Activités</h3>
+          <div id="activities-list"></div>
+        </section>
+      </aside>
+    </div>
   </div>
 
   <script>
     const apiBase = '';
-
     function confirmDelete(){ return confirm('Confirmer la suppression ?'); }
-
-    async function safeFetch(url, opts){
-      try{ const r = await fetch(apiBase + url, opts); if(!r.ok) throw new Error(r.status + ' ' + r.statusText); return r; }catch(e){ console.warn('fetch', url, e); return null; }
-    }
+    async function safeFetch(url, opts){ try{ const r = await fetch(apiBase + url, opts); if(!r.ok) throw new Error(r.status + ' ' + r.statusText); return r; }catch(e){ console.warn('fetch', url, e); return null; } }
 
     // CHAPITRES
-    async function loadChapitres(){ const r = await safeFetch('/api/chapitres'); if(!r) return; const list = await r.json(); const c=document.getElementById('chap-list'); c.innerHTML=''; list.forEach(ch=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML = `<strong>${ch.title}</strong><div>${ch.content}</div><div>Durée: ${ch.duree}</div>
-          <div>
-            <button onclick="gen(${ch.id})">Générer activité</button>
-            <button onclick="editChap(${ch.id})">Éditer</button>
-            <button onclick="delChap(${ch.id})">Supprimer</button>
-          </div>`; c.appendChild(el); }); }
+    async function loadChapitres(){ const r = await safeFetch('/api/chapitres'); if(!r) return; const list = await r.json(); const c=document.getElementById('chap-list'); c.innerHTML=''; list.forEach(ch=>{ const el=document.createElement('div'); el.className='list-item'; el.innerHTML = `<strong>${ch.title}</strong><div style="margin-top:6px">${ch.content}</div><div class="muted">Durée: ${ch.duree}</div>\n          <div class="actions">\n            <button onclick="gen(${ch.id})">Générer activité</button>\n            <button class="secondary" onclick="editChap(${ch.id})">Éditer</button>\n            <button class="secondary" onclick="delChap(${ch.id})">Supprimer</button>\n          </div>`; c.appendChild(el); }); }
     async function createChap(){ const title=document.getElementById('chap-title').value; const content=document.getElementById('chap-content').value; const duree=parseFloat(document.getElementById('chap-duree').value||'0'); await safeFetch('/api/chapitres',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Title:title, Content:content, Duree:duree })}); await loadChapitres(); }
     async function delChap(id){ if(!confirmDelete()) return; await safeFetch('/api/chapitres/'+id,{method:'DELETE'}); await loadChapitres(); }
     async function gen(id){ await safeFetch('/api/activities/generate/'+id,{method:'POST'}); await loadActivities(id); }
     function editChap(id){ const title=prompt('Titre?'); if(title===null) return; const content=prompt('Contenu?'); if(content===null) return; const duree=prompt('Durée?'); if(duree===null) return; safeFetch('/api/chapitres/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Title:title, Content:content, Duree:parseFloat(duree) })}).then(()=>loadChapitres()); }
 
     // MODULES
-    async function loadModules(){ const r=await safeFetch('/api/modules'); if(!r) return; const list=await r.json(); const c=document.getElementById('mod-list'); c.innerHTML=''; list.forEach(m=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${m.name}</strong><div>Coeff: ${m.coiff}</div><div>ID:${m.id}</div>
-          <div><button onclick="editMod(${m.id},'${escape(m.name)}',${m.coiff||0})">Éditer</button><button onclick="delMod(${m.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function loadModules(){ const r=await safeFetch('/api/modules'); if(!r) return; const list=await r.json(); const c=document.getElementById('mod-list'); c.innerHTML=''; list.forEach(m=>{ const el=document.createElement('div'); el.className='list-item'; el.innerHTML=`<strong>${m.name}</strong><div class="muted">Coeff: ${m.coiff}</div><div class="actions"><button class="secondary" onclick="editMod(${m.id},'${escape(m.name)}',${m.coiff||0})">Éditer</button><button class="secondary" onclick="delMod(${m.id})">Supprimer</button></div>`; c.appendChild(el); }); }
     async function createMod(){ const name=document.getElementById('mod-name').value; const coiff=parseFloat(document.getElementById('mod-coiff').value||'0'); const semId=parseInt(document.getElementById('mod-sem').value||'0'); const payload={ Name:name, Coiff:coiff }; if(semId>0) payload.Sem={ Id: semId }; await safeFetch('/api/modules',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)}); await loadModules(); }
     async function delMod(id){ if(!confirmDelete()) return; await safeFetch('/api/modules/'+id,{method:'DELETE'}); await loadModules(); }
     function editMod(id,name,coiff){ const n=prompt('Nom', name); if(n===null) return; const c=prompt('Coeff', coiff); if(c===null) return; safeFetch('/api/modules/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:n, Coiff:parseFloat(c) })}).then(()=>loadModules()); }
 
     // STUDENTS
-    async function loadStudents(){ const r=await safeFetch('/api/studentapi'); if(!r) return; const list=await r.json(); const c=document.getElementById('st-list'); c.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${s.nom} ${s.prenom}</strong><div>Date: ${s.date}</div><div>Genre: ${s.gender}</div>
-          <div><button onclick="editStudent(${s.id},'${escape(s.nom)}','${escape(s.prenom)}','${s.date}','${escape(s.gender)}')">Éditer</button><button onclick="delStudent(${s.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function loadStudents(){ const r=await safeFetch('/api/studentapi'); if(!r) return; const list=await r.json(); const c=document.getElementById('st-list'); c.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='list-item'; el.innerHTML=`<strong>${s.nom} ${s.prenom}</strong><div class="muted">Date: ${s.date} • Genre: ${s.gender}</div><div class="actions"><button class="secondary" onclick="editStudent(${s.id},'${escape(s.nom)}','${escape(s.prenom)}','${s.date}','${escape(s.gender)}')">Éditer</button><button class="secondary" onclick="delStudent(${s.id})">Supprimer</button></div>`; c.appendChild(el); }); }
     async function createStudent(){ const nom=document.getElementById('st-nom').value; const prenom=document.getElementById('st-prenom').value; const date=document.getElementById('st-date').value; const gender=document.getElementById('st-gender').value; await safeFetch('/api/studentapi',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Nom:nom, Prenom:prenom, Date:date, Gender:gender })}); await loadStudents(); }
     async function delStudent(id){ if(!confirmDelete()) return; await safeFetch('/api/studentapi/'+id,{method:'DELETE'}); await loadStudents(); }
     function editStudent(id,nom,prenom,date,gender){ const n=prompt('Nom', unescape(nom)); if(n===null) return; const p=prompt('Prénom', unescape(prenom)); if(p===null) return; const d=prompt('Date', date); if(d===null) return; const g=prompt('Genre', unescape(gender)); if(g===null) return; safeFetch('/api/studentapi/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Nom:n, Prenom:p, Date:d, Gender:g })}).then(()=>loadStudents()); }
 
     // SEMESTRES
-    async function loadSemestres(){ const r=await safeFetch('/api/semestre'); if(!r) return; const list=await r.json(); const c=document.getElementById('sem-list'); c.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${s.name}</strong><div>ID:${s.id}</div><div><button onclick="editSem(${s.id},'${escape(s.name)}')">Éditer</button><button onclick="delSem(${s.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function loadSemestres(){ const r=await safeFetch('/api/semestre'); if(!r) return; const list=await r.json(); const c=document.getElementById('sem-list'); c.innerHTML=''; list.forEach(s=>{ const el=document.createElement('div'); el.className='list-item'; el.innerHTML=`<strong>${s.name}</strong><div class="muted">ID:${s.id}</div><div class="actions"><button class="secondary" onclick="editSem(${s.id},'${escape(s.name)}')">Éditer</button><button class="secondary" onclick="delSem(${s.id})">Supprimer</button></div>`; c.appendChild(el); }); }
     async function createSem(){ const name=document.getElementById('sem-name').value; await safeFetch('/api/semestre',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:name })}); await loadSemestres(); }
     async function delSem(id){ if(!confirmDelete()) return; await safeFetch('/api/semestre/'+id,{method:'DELETE'}); await loadSemestres(); }
     function editSem(id,name){ const n=prompt('Nom', unescape(name)); if(n===null) return; safeFetch('/api/semestre/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:n })}).then(()=>loadSemestres()); }
 
     // FILIERES
-    async function loadFilieres(){ const r=await safeFetch('/api/filiere'); if(!r) return; const list=await r.json(); const c=document.getElementById('fil-list'); c.innerHTML=''; list.forEach(f=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${f.name}</strong><div>${f.description}</div><div><button onclick="editFil(${f.id},'${escape(f.name)}','${escape(f.description)}')">Éditer</button><button onclick="delFil(${f.id})">Supprimer</button></div>`; c.appendChild(el); }); }
+    async function loadFilieres(){ const r=await safeFetch('/api/filiere'); if(!r) return; const list=await r.json(); const c=document.getElementById('fil-list'); c.innerHTML=''; list.forEach(f=>{ const el=document.createElement('div'); el.className='list-item'; el.innerHTML=`<strong>${f.name}</strong><div class="muted">${f.description}</div><div class="actions"><button class="secondary" onclick="editFil(${f.id},'${escape(f.name)}','${escape(f.description)}')">Éditer</button><button class="secondary" onclick="delFil(${f.id})">Supprimer</button></div>`; c.appendChild(el); }); }
     async function createFil(){ const name=document.getElementById('fil-name').value; const desc=document.getElementById('fil-desc').value; await safeFetch('/api/filiere',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:name, Description:desc })}); await loadFilieres(); }
     async function delFil(id){ if(!confirmDelete()) return; await safeFetch('/api/filiere/'+id,{method:'DELETE'}); await loadFilieres(); }
     function editFil(id,name,desc){ const n=prompt('Nom', unescape(name)); if(n===null) return; const d=prompt('Description', unescape(desc)); if(d===null) return; safeFetch('/api/filiere/'+id,{method:'PUT',headers:{'Content-Type':'application/json'},body:JSON.stringify({ Name:n, Description:d })}).then(()=>loadFilieres()); }
 
     // ACTIVITIES
-    async function loadActivities(chapId){ const r=await safeFetch('/api/activities/by-chapitre/'+chapId); if(!r) return; const list=await r.json(); const c=document.getElementById('activities-list'); c.innerHTML=''; list.forEach(a=>{ const el=document.createElement('div'); el.className='card'; el.innerHTML=`<strong>${a.title}</strong><pre>${a.instructions}</pre>`; c.appendChild(el); }); }
+    async function loadActivities(chapId){ const r=await safeFetch('/api/activities/by-chapitre/'+chapId); if(!r) return; const list=await r.json(); const c=document.getElementById('activities-list'); c.innerHTML=''; list.forEach(a=>{ const el=document.createElement('div'); el.className='list-item'; el.innerHTML=`<strong>${a.title}</strong><pre>${a.instructions}</pre>`; c.appendChild(el); }); }
 
     // Wire buttons
     document.getElementById('chap-create').addEventListener('click', createChap);
+    document.getElementById('chap-refresh').addEventListener('click', loadChapitres);
     document.getElementById('mod-create').addEventListener('click', createMod);
+    document.getElementById('mod-refresh').addEventListener('click', loadModules);
     document.getElementById('st-create').addEventListener('click', createStudent);
+    document.getElementById('st-refresh').addEventListener('click', loadStudents);
     document.getElementById('sem-create').addEventListener('click', createSem);
+    document.getElementById('sem-refresh').addEventListener('click', loadSemestres);
     document.getElementById('fil-create').addEventListener('click', createFil);
+    document.getElementById('fil-refresh').addEventListener('click', loadFilieres);
 
     // Initial load
     loadChapitres(); loadModules(); loadStudents(); loadSemestres(); loadFilieres();
