Ensure index.html saved as UTF-8 with proper meta charset

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -71,7 +71,7 @@
 
       <section class="sect">
         <h4>Raccourcis</h4>
-        <div class="hint">Utilisez les sections pour créer/éditer et consulter les entités. La structure permet d'explorer Filieres ? Semestres ? Modules ? Chapitres ? Activités.</div>
+        <div class="hint">Utilisez les sections pour créer/éditer et consulter les entités. La structure permet d'explorer Filières ? Semestres ? Modules ? Chapitres ? Activités.</div>
       </section>
     </nav>
 
